Some design changed

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -33,12 +33,13 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <div class="words word-1">
-          <span>R</span>
-          <span>A</span>
-          <span>K</span>
-          <span>I</span>
-          <span>F</span>
-          <span>Y</span>
+          <span>W</span>
+          <span>e</span>
+          <span>l</span>
+          <span>c</span>
+          <span>o</span>
+          <span>m</span>
+          <span>e</span>
         </div>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <% pages.forEach(page=> { %>
