Cart updated and seller header added

--- a/views/admin/edit_product.ejs
+++ b/views/admin/edit_product.ejs
@@ -1,5 +1,8 @@
-<%- include('../_layouts/adminheader') %>
-
+<% if(user.admin == 1) { %>
+    <%- include('../_layouts/adminheader') %>
+    <% } else { %> 
+        <%- include('../_layouts/sellerheader') %>
+    <% } %> 
 <div class="card" style="width: 70rem;">
     <div class="card-body">
         <h2 class="card-title"><%= title %></h2>
