--- a/views/admin/add_product.ejs
+++ b/views/admin/add_product.ejs
@@ -1,5 +1,8 @@
-<%- include('../_layouts/adminheader') %>
-
+<% if(user.admin == 1) { %>
+    <%- include('../_layouts/adminheader') %>
+    <% } else { %> 
+        <%- include('../_layouts/sellerheader') %>
+    <% } %> 
 <h2 class='page-title'>Add a product</h2>
 <a href='/admin/products' class='btn btn-primary'>Back to all products</a>
 <br><br>
