category visible in product page now

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -29,18 +29,11 @@
   </div>
   <!-- Paypal loading menu ends -->
 
-  <header class="p-3 bg-dark text-white">
+  <header class="p-3 bg-dark text-white" style=" background-image: url(https://i.stack.imgur.com/spmUM.gif);
+ background-position: bottom;">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <div class="words word-1">
-          <span>W</span>
-          <span>e</span>
-          <span>l</span>
-          <span>c</span>
-          <span>o</span>
-          <span>m</span>
-          <span>e</span>
-        </div>
+        <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: lightskyblue;">Rakify Shopping Mall</h1>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <% pages.forEach(page=> { %>
           <% if (page.slug == 'home') { %>
