Made Rakify shopping mall to rakify mall

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -33,7 +33,7 @@
  background-position: bottom;">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: lightskyblue;">Rakify Shopping Mall</h1>
+        <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: lightskyblue;">Rakify Mall</h1>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <% pages.forEach(page=> { %>
           <% if (page.slug == 'home') { %>
