unused node modules deleted and page<2 means no pagination

--- a/views/products_by_category.ejs
+++ b/views/products_by_category.ejs
@@ -21,6 +21,7 @@
 </div>
 
 <!-- Pagination begins -->
+<% if(page>1) { %> 
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-end">
         <!-- previous link -->
@@ -44,5 +45,5 @@
         <% } %>
     </ul>
 </nav>
-
+<% } %> 
 <%- include('_layouts/footer') %>
