--- a/views/all_products.ejs
+++ b/views/all_products.ejs
@@ -19,6 +19,7 @@
 </div>
 
 <!-- Pagination begins -->
+<% if(page>1) { %> 
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-end">
         <!-- previous link -->
@@ -42,5 +43,5 @@
         <% } %>
     </ul>
 </nav>
-
+<% } %> 
 <%- include('_layouts/footer') %>
